--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.14.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.4"
   }
 }
